<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#660099"
    android:orientation="vertical" >
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="30dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/constantfonttype"
                android:text="@string/regtxt"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/emailaddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@string/constantfonttype"
                android:hint="@string/regemail"
                android:inputType="textEmailAddress"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@string/constantfonttype"
                android:hint="@string/regusername"
                android:inputType="textPersonName"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pass1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@string/constantfonttype"
                android:hint="@string/passwordhint"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pass2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:fontFamily="@string/constantfonttype"
                android:hint="@string/passwordhint"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:textSize="15sp" />



            <Button
                android:id="@+id/senddata"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#308014"
                android:ems="10"
                android:fontFamily="@string/constantfonttype"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/regbuttondata"
                android:textColor="#ffffff" />
        </LinearLayout>
</ScrollView>
</LinearLayout>
