<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#660099"
    android:orientation="vertical" >

    
    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        >
        
    <LinearLayout
        android:id="@+id/loginlayoutresponsemsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/loginresponsemsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#EE0000"
            android:fontFamily="Book Antiqua"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/LoginErr"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginlayoutloadmsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/constantfonttype"
            android:text="@string/logintext"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/codehint"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textSize="15sp" 
            android:fontFamily="@string/constantfonttype">
			<requestFocus />
        </EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:textSize="15sp" 
            android:fontFamily="@string/constantfonttype"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:ems="10"
            android:fontFamily="@string/constantfonttype"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/loginbuttontxt"
            android:textColor="#000000" />
       	<Button
            android:id="@+id/registerhere"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#308014"
            android:ems="10"
            android:fontFamily="@string/constantfonttype"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/loginregbuttontxt"
            android:textColor="#ffffff" />

      
    </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>